service-mesh/2. fault-injection/1. HTTP Abort/category-api/destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: category-subset-rules
spec:
  host: category-api-service.default.svc.cluster.local
  subsets:
  - name: all-pods
    labels:  # selector
      app: category-api
---
