service-mesh/2. fault-injection/1. HTTP Abort/category-api/virtual-service.yaml
# Abort all the calls to category-api-service
# which comes via proxy
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: category-virtual-service
spec:
  hosts:
  - category-api-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: all-pods
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
---
